--- a/TodoList/my_to_do_app/templates/my_to_do_app/index.html
+++ b/TodoList/my_to_do_app/templates/my_to_do_app/index.html
@@ -54,7 +54,7 @@
             <div class="toDoDiv">
                 <ul class="list-group">
                     {% for todo in todos %}
-                    <form action="./deleteTodo/" method="GET">   
+                    <form action="./doneTodo/" method="GET">   
                         <div class="input-group" name='todo1'>
                             <li class="list-group-item">{{todo.content}}</li>
                             <input type="hidden" id="todoNum" name="todoNum" value="{{todo.id}}"></input>
