--- a/TodoList/my_to_do_app/templates/my_to_do_app/index.html
+++ b/TodoList/my_to_do_app/templates/my_to_do_app/index.html
@@ -54,6 +54,7 @@
             <div class="toDoDiv">
                 <ul class="list-group">
                     {% for todo in todos %}
+                    {% if todo.isDone == False %}
                     <form action="./doneTodo/" method="GET">   
                         <div class="input-group" name='todo1'>
                             <li class="list-group-item">{{todo.content}}</li>
@@ -63,6 +64,8 @@
                             </span>
                         </div>
                     </form>
+                    {% else %}
+                    {% endif %}
                     {% endfor %}
                 </ul>
             </div>
